don't cut off tooltips on fields inside section https://github.com/Strategy11/formidable-pro/issues/2202

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -4445,7 +4445,6 @@ ul.start_divider {
 	padding: 8px 13px 0 8px;
 	min-height: 115px;
 	transition: all 0.4s linear;
-	overflow: hidden;
 }
 
 .frm-section-collapsed .frm_no_section_fields,
